--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^16.0.3",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
+    "mongoose": "^6.8.1",
     "nodemon": "^2.0.20"
   }
 }
