--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "mongoose": "^6.8.1",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20"
   }
 }
